update scroll bugs

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,9 +11,9 @@
 }
 
 .red {
-    background-color: red;
+    /*background-color: red;*/
 }
 
 .blue {
-    background-color: blue;
+    /*background-color: blue;*/
 }
